// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli test by import should handle JSON output option 1`] = `
"[
  {
    \\"availabilityZone\\": \\"us-east-1a\\",
    \\"instanceType\\": \\"t3.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0016,
    \\"timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  },
  {
    \\"availabilityZone\\": \\"us-east-1b\\",
    \\"instanceType\\": \\"t3.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0016,
    \\"timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  },
  {
    \\"availabilityZone\\": \\"us-east-1c\\",
    \\"instanceType\\": \\"t3.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0016,
    \\"timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  },
  {
    \\"availabilityZone\\": \\"us-east-1d\\",
    \\"instanceType\\": \\"t3.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0016,
    \\"timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  },
  {
    \\"availabilityZone\\": \\"us-east-1f\\",
    \\"instanceType\\": \\"t3.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0016,
    \\"timestamp\\": \\"2019-10-15T17:09:43.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  },
  {
    \\"availabilityZone\\": \\"us-east-1a\\",
    \\"instanceType\\": \\"t3a.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0017,
    \\"timestamp\\": \\"2019-10-15T22:11:29.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  },
  {
    \\"availabilityZone\\": \\"us-east-1c\\",
    \\"instanceType\\": \\"t3a.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0017,
    \\"timestamp\\": \\"2019-10-15T22:11:29.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  },
  {
    \\"availabilityZone\\": \\"us-east-1b\\",
    \\"instanceType\\": \\"t3a.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0018,
    \\"timestamp\\": \\"2019-10-15T22:11:29.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  },
  {
    \\"availabilityZone\\": \\"us-east-1d\\",
    \\"instanceType\\": \\"t3a.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0018,
    \\"timestamp\\": \\"2019-10-15T20:21:10.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  },
  {
    \\"availabilityZone\\": \\"us-east-1f\\",
    \\"instanceType\\": \\"t3a.nano\\",
    \\"platform\\": \\"Linux/UNIX (Amazon VPC)\\",
    \\"spotPrice\\": 0.0018,
    \\"timestamp\\": \\"2019-10-15T22:11:29.000Z\\",
    \\"vCpu\\": 2,
    \\"memoryGiB\\": 0.5
  }
]"
`;

exports[`cli test by import should handle instance family option 1`] = `
"╔═══════════╤════════╤═════════════════════════╤═══════════════════╗
║ Type      │  Price │ Platform                │ Availability Zone ║
╟───────────┼────────┼─────────────────────────┼───────────────────╢
║ c1.medium │ 0.0130 │ Linux/UNIX              │ us-east-1a        ║
║ c1.medium │ 0.0130 │ Linux/UNIX (Amazon VPC) │ us-east-1a        ║
║ c1.medium │ 0.0130 │ Linux/UNIX              │ us-east-1b        ║
║ c1.medium │ 0.0130 │ Linux/UNIX (Amazon VPC) │ us-east-1b        ║
║ c1.medium │ 0.0130 │ Linux/UNIX              │ us-east-1c        ║
║ c1.medium │ 0.0130 │ Linux/UNIX (Amazon VPC) │ us-east-1c        ║
║ c1.medium │ 0.0130 │ Linux/UNIX              │ us-east-1d        ║
║ c1.medium │ 0.0130 │ Linux/UNIX (Amazon VPC) │ us-east-1d        ║
║ c1.medium │ 0.0130 │ Linux/UNIX              │ us-west-2a        ║
║ c1.medium │ 0.0130 │ Linux/UNIX              │ us-west-2b        ║
║ c1.medium │ 0.0130 │ Linux/UNIX              │ us-west-2c        ║
║ c1.medium │ 0.0148 │ Linux/UNIX              │ eu-west-1a        ║
║ c1.medium │ 0.0148 │ Linux/UNIX              │ eu-west-1b        ║
║ c1.medium │ 0.0148 │ Linux/UNIX              │ eu-west-1c        ║
║ c1.medium │ 0.0148 │ Linux/UNIX              │ us-west-1b        ║
║ c1.medium │ 0.0148 │ Linux/UNIX              │ us-west-1c        ║
║ c1.medium │ 0.0158 │ Linux/UNIX              │ ap-northeast-1a   ║
║ c1.medium │ 0.0158 │ Linux/UNIX (Amazon VPC) │ ap-northeast-1a   ║
║ c1.medium │ 0.0158 │ Linux/UNIX              │ ap-northeast-1c   ║
║ c1.medium │ 0.0158 │ Linux/UNIX (Amazon VPC) │ ap-northeast-1c   ║
╚═══════════╧════════╧═════════════════════════╧═══════════════════╝
"
`;

exports[`cli test by import should handle no ec2 info found should return expected values 1`] = `
"╔═══════════╤════════╤═════════╤═════════╤═════════════════════════╤═══════════════════╤═════════════════════════╗
║ Type      │  Price │    vCPU │     RAM │ Platform                │ Availability Zone │ Region                  ║
╟───────────┼────────┼─────────┼─────────┼─────────────────────────┼───────────────────┼─────────────────────────╢
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX              │ us-east-1a        │ US East (N. Virginia)   ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX (Amazon VPC) │ us-east-1a        │ US East (N. Virginia)   ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX              │ us-east-1b        │ US East (N. Virginia)   ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX (Amazon VPC) │ us-east-1b        │ US East (N. Virginia)   ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX              │ us-east-1c        │ US East (N. Virginia)   ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX (Amazon VPC) │ us-east-1c        │ US East (N. Virginia)   ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX              │ us-east-1d        │ US East (N. Virginia)   ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX (Amazon VPC) │ us-east-1d        │ US East (N. Virginia)   ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX              │ us-west-2a        │ US West (Oregon)        ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX              │ us-west-2b        │ US West (Oregon)        ║
║ c1.medium │ 0.0130 │ unknown │ unknown │ Linux/UNIX              │ us-west-2c        │ US West (Oregon)        ║
║ c1.medium │ 0.0148 │ unknown │ unknown │ Linux/UNIX              │ eu-west-1a        │ Europe (Ireland)        ║
║ c1.medium │ 0.0148 │ unknown │ unknown │ Linux/UNIX              │ eu-west-1b        │ Europe (Ireland)        ║
║ c1.medium │ 0.0148 │ unknown │ unknown │ Linux/UNIX              │ eu-west-1c        │ Europe (Ireland)        ║
║ c1.medium │ 0.0148 │ unknown │ unknown │ Linux/UNIX              │ us-west-1b        │ US West (N. California) ║
║ c1.medium │ 0.0148 │ unknown │ unknown │ Linux/UNIX              │ us-west-1c        │ US West (N. California) ║
║ c1.medium │ 0.0158 │ unknown │ unknown │ Linux/UNIX              │ ap-northeast-1a   │ Asia Pacific (Tokyo)    ║
║ c1.medium │ 0.0158 │ unknown │ unknown │ Linux/UNIX (Amazon VPC) │ ap-northeast-1a   │ Asia Pacific (Tokyo)    ║
║ c1.medium │ 0.0158 │ unknown │ unknown │ Linux/UNIX              │ ap-northeast-1c   │ Asia Pacific (Tokyo)    ║
║ c1.medium │ 0.0158 │ unknown │ unknown │ Linux/UNIX (Amazon VPC) │ ap-northeast-1c   │ Asia Pacific (Tokyo)    ║
╚═══════════╧════════╧═════════╧═════════╧═════════════════════════╧═══════════════════╧═════════════════════════╝
"
`;

exports[`cli test by import should print help 1`] = `
"aws-spot-price

get current AWS spot instance prices

Options:
      --version             Show version number                        [boolean]
      --help                Show help                                  [boolean]
      --ui                  Start with UI mode        [boolean] [default: false]
  -r, --region              AWS regions.
           [array] [choices: \\"us-east-1\\", \\"us-east-2\\", \\"us-west-1\\", \\"us-west-2\\",
                  \\"af-south-1\\", \\"ap-east-1\\", \\"ap-northeast-1\\", \\"ap-northeast-2\\",
             \\"ap-northeast-3\\", \\"ap-south-1\\", \\"ap-southeast-1\\", \\"ap-southeast-2\\",
   \\"ap-southeast-3\\", \\"ca-central-1\\", \\"eu-central-1\\", \\"eu-north-1\\", \\"eu-south-1\\",
               \\"eu-west-1\\", \\"eu-west-2\\", \\"eu-west-3\\", \\"me-south-1\\", \\"sa-east-1\\"]
  -i, --instanceType        EC2 type
           [array] [choices: \\"a1.medium\\", \\"a1.large\\", \\"a1.xlarge\\", \\"a1.2xlarge\\",
      \\"a1.4xlarge\\", \\"a1.metal\\", \\"t1.micro\\", \\"t2.micro\\", \\"t2.small\\", \\"t2.medium\\",
       \\"t2.large\\", \\"t2.xlarge\\", \\"t2.2xlarge\\", \\"t3.nano\\", \\"t3.micro\\", \\"t3.small\\",
    \\"t3.medium\\", \\"t3.large\\", \\"t3.xlarge\\", \\"t3.2xlarge\\", \\"t3a.nano\\", \\"t3a.micro\\",
            \\"t3a.small\\", \\"t3a.medium\\", \\"t3a.large\\", \\"t3a.xlarge\\", \\"t3a.2xlarge\\",
  \\"t4g.nano\\", \\"t4g.micro\\", \\"t4g.small\\", \\"t4g.medium\\", \\"t4g.large\\", \\"t4g.xlarge\\",
   \\"t4g.2xlarge\\", \\"m1.small\\", \\"m1.medium\\", \\"m1.large\\", \\"m1.xlarge\\", \\"m2.xlarge\\",
               \\"m2.2xlarge\\", \\"m2.4xlarge\\", \\"m3.medium\\", \\"m3.large\\", \\"m3.xlarge\\",
              \\"m3.2xlarge\\", \\"m4.large\\", \\"m4.xlarge\\", \\"m4.2xlarge\\", \\"m4.4xlarge\\",
            \\"m4.10xlarge\\", \\"m4.16xlarge\\", \\"m5.large\\", \\"m5.xlarge\\", \\"m5.2xlarge\\",
        \\"m5.4xlarge\\", \\"m5.8xlarge\\", \\"m5.12xlarge\\", \\"m5.16xlarge\\", \\"m5.24xlarge\\",
            \\"m5.metal\\", \\"m5a.large\\", \\"m5a.xlarge\\", \\"m5a.2xlarge\\", \\"m5a.4xlarge\\",
    \\"m5a.8xlarge\\", \\"m5a.12xlarge\\", \\"m5a.16xlarge\\", \\"m5a.24xlarge\\", \\"m5ad.large\\",
                  \\"m5ad.xlarge\\", \\"m5ad.2xlarge\\", \\"m5ad.4xlarge\\", \\"m5ad.8xlarge\\",
   \\"m5ad.12xlarge\\", \\"m5ad.16xlarge\\", \\"m5ad.24xlarge\\", \\"m5d.large\\", \\"m5d.xlarge\\",
    \\"m5d.2xlarge\\", \\"m5d.4xlarge\\", \\"m5d.8xlarge\\", \\"m5d.12xlarge\\", \\"m5d.16xlarge\\",
       \\"m5d.24xlarge\\", \\"m5d.metal\\", \\"m5dn.large\\", \\"m5dn.xlarge\\", \\"m5dn.2xlarge\\",
               \\"m5dn.4xlarge\\", \\"m5dn.8xlarge\\", \\"m5dn.12xlarge\\", \\"m5dn.16xlarge\\",
        \\"m5dn.24xlarge\\", \\"m5dn.metal\\", \\"m5n.large\\", \\"m5n.xlarge\\", \\"m5n.2xlarge\\",
   \\"m5n.4xlarge\\", \\"m5n.8xlarge\\", \\"m5n.12xlarge\\", \\"m5n.16xlarge\\", \\"m5n.24xlarge\\",
       \\"m5n.metal\\", \\"m5zn.large\\", \\"m5zn.xlarge\\", \\"m5zn.2xlarge\\", \\"m5zn.3xlarge\\",
       \\"m5zn.6xlarge\\", \\"m5zn.12xlarge\\", \\"m5zn.metal\\", \\"m6a.large\\", \\"m6a.xlarge\\",
    \\"m6a.2xlarge\\", \\"m6a.4xlarge\\", \\"m6a.8xlarge\\", \\"m6a.12xlarge\\", \\"m6a.16xlarge\\",
      \\"m6a.24xlarge\\", \\"m6a.32xlarge\\", \\"m6a.48xlarge\\", \\"m6g.medium\\", \\"m6g.large\\",
      \\"m6g.xlarge\\", \\"m6g.2xlarge\\", \\"m6g.4xlarge\\", \\"m6g.8xlarge\\", \\"m6g.12xlarge\\",
        \\"m6g.16xlarge\\", \\"m6g.metal\\", \\"m6gd.medium\\", \\"m6gd.large\\", \\"m6gd.xlarge\\",
                \\"m6gd.2xlarge\\", \\"m6gd.4xlarge\\", \\"m6gd.8xlarge\\", \\"m6gd.12xlarge\\",
        \\"m6gd.16xlarge\\", \\"m6gd.metal\\", \\"m6i.large\\", \\"m6i.xlarge\\", \\"m6i.2xlarge\\",
   \\"m6i.4xlarge\\", \\"m6i.8xlarge\\", \\"m6i.12xlarge\\", \\"m6i.16xlarge\\", \\"m6i.24xlarge\\",
              \\"m6i.32xlarge\\", \\"m6i.metal\\", \\"c1.medium\\", \\"c1.xlarge\\", \\"c3.large\\",
              \\"c3.xlarge\\", \\"c3.2xlarge\\", \\"c3.4xlarge\\", \\"c3.8xlarge\\", \\"c4.large\\",
              \\"c4.xlarge\\", \\"c4.2xlarge\\", \\"c4.4xlarge\\", \\"c4.8xlarge\\", \\"c5.large\\",
           \\"c5.xlarge\\", \\"c5.2xlarge\\", \\"c5.4xlarge\\", \\"c5.9xlarge\\", \\"c5.12xlarge\\",
            \\"c5.18xlarge\\", \\"c5.24xlarge\\", \\"c5.metal\\", \\"c5a.large\\", \\"c5a.xlarge\\",
    \\"c5a.2xlarge\\", \\"c5a.4xlarge\\", \\"c5a.8xlarge\\", \\"c5a.12xlarge\\", \\"c5a.16xlarge\\",
    \\"c5a.24xlarge\\", \\"c5ad.large\\", \\"c5ad.xlarge\\", \\"c5ad.2xlarge\\", \\"c5ad.4xlarge\\",
              \\"c5ad.8xlarge\\", \\"c5ad.12xlarge\\", \\"c5ad.16xlarge\\", \\"c5ad.24xlarge\\",
         \\"c5d.large\\", \\"c5d.xlarge\\", \\"c5d.2xlarge\\", \\"c5d.4xlarge\\", \\"c5d.9xlarge\\",
       \\"c5d.12xlarge\\", \\"c5d.18xlarge\\", \\"c5d.24xlarge\\", \\"c5d.metal\\", \\"c5n.large\\",
      \\"c5n.xlarge\\", \\"c5n.2xlarge\\", \\"c5n.4xlarge\\", \\"c5n.9xlarge\\", \\"c5n.18xlarge\\",
           \\"c5n.metal\\", \\"c6a.large\\", \\"c6a.xlarge\\", \\"c6a.2xlarge\\", \\"c6a.4xlarge\\",
  \\"c6a.8xlarge\\", \\"c6a.12xlarge\\", \\"c6a.16xlarge\\", \\"c6a.24xlarge\\", \\"c6a.32xlarge\\",
         \\"c6a.48xlarge\\", \\"c6g.medium\\", \\"c6g.large\\", \\"c6g.xlarge\\", \\"c6g.2xlarge\\",
      \\"c6g.4xlarge\\", \\"c6g.8xlarge\\", \\"c6g.12xlarge\\", \\"c6g.16xlarge\\", \\"c6g.metal\\",
     \\"c6gd.medium\\", \\"c6gd.large\\", \\"c6gd.xlarge\\", \\"c6gd.2xlarge\\", \\"c6gd.4xlarge\\",
  \\"c6gd.8xlarge\\", \\"c6gd.12xlarge\\", \\"c6gd.16xlarge\\", \\"c6gd.metal\\", \\"c6gn.medium\\",
    \\"c6gn.large\\", \\"c6gn.xlarge\\", \\"c6gn.2xlarge\\", \\"c6gn.4xlarge\\", \\"c6gn.8xlarge\\",
     \\"c6gn.12xlarge\\", \\"c6gn.16xlarge\\", \\"c6i.large\\", \\"c6i.xlarge\\", \\"c6i.2xlarge\\",
   \\"c6i.4xlarge\\", \\"c6i.8xlarge\\", \\"c6i.12xlarge\\", \\"c6i.16xlarge\\", \\"c6i.24xlarge\\",
             \\"c6i.32xlarge\\", \\"c6i.metal\\", \\"r3.large\\", \\"r3.xlarge\\", \\"r3.2xlarge\\",
              \\"r3.4xlarge\\", \\"r3.8xlarge\\", \\"r4.large\\", \\"r4.xlarge\\", \\"r4.2xlarge\\",
             \\"r4.4xlarge\\", \\"r4.8xlarge\\", \\"r4.16xlarge\\", \\"r5.large\\", \\"r5.xlarge\\",
         \\"r5.2xlarge\\", \\"r5.4xlarge\\", \\"r5.8xlarge\\", \\"r5.12xlarge\\", \\"r5.16xlarge\\",
            \\"r5.24xlarge\\", \\"r5.metal\\", \\"r5a.large\\", \\"r5a.xlarge\\", \\"r5a.2xlarge\\",
   \\"r5a.4xlarge\\", \\"r5a.8xlarge\\", \\"r5a.12xlarge\\", \\"r5a.16xlarge\\", \\"r5a.24xlarge\\",
    \\"r5ad.large\\", \\"r5ad.xlarge\\", \\"r5ad.2xlarge\\", \\"r5ad.4xlarge\\", \\"r5ad.8xlarge\\",
   \\"r5ad.12xlarge\\", \\"r5ad.16xlarge\\", \\"r5ad.24xlarge\\", \\"r5b.large\\", \\"r5b.xlarge\\",
    \\"r5b.2xlarge\\", \\"r5b.4xlarge\\", \\"r5b.8xlarge\\", \\"r5b.12xlarge\\", \\"r5b.16xlarge\\",
          \\"r5b.24xlarge\\", \\"r5b.metal\\", \\"r5d.large\\", \\"r5d.xlarge\\", \\"r5d.2xlarge\\",
   \\"r5d.4xlarge\\", \\"r5d.8xlarge\\", \\"r5d.12xlarge\\", \\"r5d.16xlarge\\", \\"r5d.24xlarge\\",
       \\"r5d.metal\\", \\"r5dn.large\\", \\"r5dn.xlarge\\", \\"r5dn.2xlarge\\", \\"r5dn.4xlarge\\",
              \\"r5dn.8xlarge\\", \\"r5dn.12xlarge\\", \\"r5dn.16xlarge\\", \\"r5dn.24xlarge\\",
          \\"r5dn.metal\\", \\"r5n.large\\", \\"r5n.xlarge\\", \\"r5n.2xlarge\\", \\"r5n.4xlarge\\",
     \\"r5n.8xlarge\\", \\"r5n.12xlarge\\", \\"r5n.16xlarge\\", \\"r5n.24xlarge\\", \\"r5n.metal\\",
          \\"r6g.medium\\", \\"r6g.large\\", \\"r6g.xlarge\\", \\"r6g.2xlarge\\", \\"r6g.4xlarge\\",
      \\"r6g.8xlarge\\", \\"r6g.12xlarge\\", \\"r6g.16xlarge\\", \\"r6g.metal\\", \\"r6gd.medium\\",
    \\"r6gd.large\\", \\"r6gd.xlarge\\", \\"r6gd.2xlarge\\", \\"r6gd.4xlarge\\", \\"r6gd.8xlarge\\",
      \\"r6gd.12xlarge\\", \\"r6gd.16xlarge\\", \\"r6gd.metal\\", \\"r6i.large\\", \\"r6i.xlarge\\",
    \\"r6i.2xlarge\\", \\"r6i.4xlarge\\", \\"r6i.8xlarge\\", \\"r6i.12xlarge\\", \\"r6i.16xlarge\\",
      \\"r6i.24xlarge\\", \\"r6i.32xlarge\\", \\"r6i.metal\\", \\"x1.16xlarge\\", \\"x1.32xlarge\\",
      \\"x1e.xlarge\\", \\"x1e.2xlarge\\", \\"x1e.4xlarge\\", \\"x1e.8xlarge\\", \\"x1e.16xlarge\\",
     \\"x1e.32xlarge\\", \\"x2gd.medium\\", \\"x2gd.large\\", \\"x2gd.xlarge\\", \\"x2gd.2xlarge\\",
               \\"x2gd.4xlarge\\", \\"x2gd.8xlarge\\", \\"x2gd.12xlarge\\", \\"x2gd.16xlarge\\",
             \\"x2gd.metal\\", \\"x2idn.16xlarge\\", \\"x2idn.24xlarge\\", \\"x2idn.32xlarge\\",
          \\"x2iedn.xlarge\\", \\"x2iedn.2xlarge\\", \\"x2iedn.4xlarge\\", \\"x2iedn.8xlarge\\",
      \\"x2iedn.16xlarge\\", \\"x2iedn.24xlarge\\", \\"x2iedn.32xlarge\\", \\"x2iezn.2xlarge\\",
        \\"x2iezn.4xlarge\\", \\"x2iezn.6xlarge\\", \\"x2iezn.8xlarge\\", \\"x2iezn.12xlarge\\",
        \\"x2iezn.metal\\", \\"z1d.large\\", \\"z1d.xlarge\\", \\"z1d.2xlarge\\", \\"z1d.3xlarge\\",
          \\"z1d.6xlarge\\", \\"z1d.12xlarge\\", \\"z1d.metal\\", \\"d2.xlarge\\", \\"d2.2xlarge\\",
            \\"d2.4xlarge\\", \\"d2.8xlarge\\", \\"d3.xlarge\\", \\"d3.2xlarge\\", \\"d3.4xlarge\\",
    \\"d3.8xlarge\\", \\"d3en.xlarge\\", \\"d3en.2xlarge\\", \\"d3en.4xlarge\\", \\"d3en.6xlarge\\",
      \\"d3en.8xlarge\\", \\"d3en.12xlarge\\", \\"h1.2xlarge\\", \\"h1.4xlarge\\", \\"h1.8xlarge\\",
           \\"h1.16xlarge\\", \\"i2.xlarge\\", \\"i2.2xlarge\\", \\"i2.4xlarge\\", \\"i2.8xlarge\\",
              \\"i3.large\\", \\"i3.xlarge\\", \\"i3.2xlarge\\", \\"i3.4xlarge\\", \\"i3.8xlarge\\",
         \\"i3.16xlarge\\", \\"i3.metal\\", \\"i3en.large\\", \\"i3en.xlarge\\", \\"i3en.2xlarge\\",
               \\"i3en.3xlarge\\", \\"i3en.6xlarge\\", \\"i3en.12xlarge\\", \\"i3en.24xlarge\\",
  \\"i3en.metal\\", \\"im4gn.large\\", \\"im4gn.xlarge\\", \\"im4gn.2xlarge\\", \\"im4gn.4xlarge\\",
             \\"im4gn.8xlarge\\", \\"im4gn.16xlarge\\", \\"is4gen.medium\\", \\"is4gen.large\\",
          \\"is4gen.xlarge\\", \\"is4gen.2xlarge\\", \\"is4gen.4xlarge\\", \\"is4gen.8xlarge\\",
        \\"dl1.24xlarge\\", \\"f1.2xlarge\\", \\"f1.4xlarge\\", \\"f1.16xlarge\\", \\"g2.2xlarge\\",
          \\"g2.8xlarge\\", \\"g3.4xlarge\\", \\"g3.8xlarge\\", \\"g3.16xlarge\\", \\"g3s.xlarge\\",
                  \\"g4ad.xlarge\\", \\"g4ad.2xlarge\\", \\"g4ad.4xlarge\\", \\"g4ad.8xlarge\\",
                 \\"g4ad.16xlarge\\", \\"g4dn.xlarge\\", \\"g4dn.2xlarge\\", \\"g4dn.4xlarge\\",
    \\"g4dn.8xlarge\\", \\"g4dn.12xlarge\\", \\"g4dn.16xlarge\\", \\"g4dn.metal\\", \\"g5.xlarge\\",
         \\"g5.2xlarge\\", \\"g5.4xlarge\\", \\"g5.8xlarge\\", \\"g5.12xlarge\\", \\"g5.16xlarge\\",
       \\"g5.24xlarge\\", \\"g5.48xlarge\\", \\"g5g.xlarge\\", \\"g5g.2xlarge\\", \\"g5g.4xlarge\\",
      \\"g5g.8xlarge\\", \\"g5g.16xlarge\\", \\"g5g.metal\\", \\"inf1.xlarge\\", \\"inf1.2xlarge\\",
      \\"inf1.6xlarge\\", \\"inf1.24xlarge\\", \\"p2.xlarge\\", \\"p2.8xlarge\\", \\"p2.16xlarge\\",
     \\"p3.2xlarge\\", \\"p3.8xlarge\\", \\"p3.16xlarge\\", \\"p3dn.24xlarge\\", \\"p4d.24xlarge\\",
                                   \\"vt1.3xlarge\\", \\"vt1.6xlarge\\", \\"vt1.24xlarge\\"]
      --family              EC2 instance family.
                    [array] [choices: \\"general\\", \\"compute\\", \\"memory\\", \\"storage\\",
                                                         \\"acceleratedComputing\\"]
  -f, --familyType          EC2 instance family types.
       [array] [choices: \\"a1\\", \\"t1\\", \\"t2\\", \\"t3\\", \\"t3a\\", \\"t4g\\", \\"m1\\", \\"m2\\", \\"m3\\",
  \\"m4\\", \\"m5\\", \\"m5a\\", \\"m5ad\\", \\"m5d\\", \\"m5dn\\", \\"m5n\\", \\"m5zn\\", \\"m6a\\", \\"m6g\\", \\"m6gd\\",
       \\"m6i\\", \\"c1\\", \\"c3\\", \\"c4\\", \\"c5\\", \\"c5a\\", \\"c5ad\\", \\"c5d\\", \\"c5n\\", \\"c6a\\", \\"c6g\\",
   \\"c6gd\\", \\"c6gn\\", \\"c6i\\", \\"r3\\", \\"r4\\", \\"r5\\", \\"r5a\\", \\"r5ad\\", \\"r5b\\", \\"r5d\\", \\"r5dn\\",
  \\"r5n\\", \\"r6g\\", \\"r6gd\\", \\"r6i\\", \\"x1\\", \\"x1e\\", \\"x2gd\\", \\"x2idn\\", \\"x2iedn\\", \\"x2iezn\\",
  \\"z1d\\", \\"d2\\", \\"d3\\", \\"d3en\\", \\"h1\\", \\"i2\\", \\"i3\\", \\"i3en\\", \\"im4gn\\", \\"is4gen\\", \\"dl1\\",
       \\"f1\\", \\"g2\\", \\"g3\\", \\"g3s\\", \\"g4ad\\", \\"g4dn\\", \\"g5\\", \\"g5g\\", \\"inf1\\", \\"p2\\", \\"p3\\",
                                                           \\"p3dn\\", \\"p4d\\", \\"vt1\\"]
  -s, --size                EC2 instance sizes.
        [array] [choices: \\"nano\\", \\"micro\\", \\"small\\", \\"medium\\", \\"large\\", \\"xlarge\\",
   \\"2xlarge\\", \\"3xlarge\\", \\"4xlarge\\", \\"6xlarge\\", \\"8xlarge\\", \\"9xlarge\\", \\"10xlarge\\",
         \\"12xlarge\\", \\"16xlarge\\", \\"18xlarge\\", \\"24xlarge\\", \\"32xlarge\\", \\"48xlarge\\",
                                                                        \\"metal\\"]
      --minVCPU, --mc       Minimum VCPU count             [number] [default: 1]
      --minMemoryGiB, --mm  Minimum memory (GiB)         [number] [default: 0.5]
      --priceLimit, --pl    Maximum price limit          [number] [default: 100]
  -p, --platforms           Platforms. Choose \`windows\` or \`linux\` (all
                            lowercase) as wildcard.
  [array] [choices: \\"Linux/UNIX\\", \\"Linux/UNIX (Amazon VPC)\\", \\"SUSE Linux\\", \\"SUSE
      Linux (Amazon VPC)\\", \\"Red Hat Enterprise Linux\\", \\"Red Hat Enterprise Linux
           (Amazon VPC)\\", \\"Windows\\", \\"Windows (Amazon VPC)\\", \\"linux\\", \\"windows\\"]
                             [default: [\\"Linux/UNIX\\",\\"Linux/UNIX (Amazon VPC)\\"]]
  -l, --limit               Limit results output length   [number] [default: 30]
      --reduceAZ, --raz     Reduce results with cheapest Availability Zone
                            within Region              [boolean] [default: true]
  -w, --wide                Output results with detail (vCPU, memory, etc)
                                                      [boolean] [default: false]
  -j, --json                Outputs in JSON format    [boolean] [default: false]
      --accessKeyId         AWS Access Key ID.                          [string]
      --secretAccessKey     AWS Secret Access Key.                      [string]"
`;

exports[`cli test by import should return expected values if no matching records found 1`] = `"no matching records found"`;

exports[`cli test by import should return expected values with default options 1`] = `
"╔══════════╤════════╤═════════════════════════╤═══════════════════╗
║ Type     │  Price │ Platform                │ Availability Zone ║
╟──────────┼────────┼─────────────────────────┼───────────────────╢
║ t3a.nano │ 0.0015 │ Linux/UNIX              │ us-west-2a        ║
║ t3.nano  │ 0.0016 │ Linux/UNIX              │ eu-north-1a       ║
║ t3.nano  │ 0.0016 │ Linux/UNIX (Amazon VPC) │ us-east-1a        ║
║ t3.nano  │ 0.0016 │ Linux/UNIX              │ us-east-2a        ║
║ t3.nano  │ 0.0016 │ Linux/UNIX              │ us-west-2a        ║
║ t3a.nano │ 0.0016 │ Linux/UNIX              │ ca-central-1a     ║
║ t3a.nano │ 0.0016 │ Linux/UNIX              │ eu-central-1a     ║
║ t3a.nano │ 0.0016 │ Linux/UNIX              │ eu-west-1b        ║
║ t3a.nano │ 0.0016 │ Linux/UNIX              │ eu-west-2a        ║
║ t3a.nano │ 0.0016 │ Linux/UNIX              │ eu-west-3a        ║
║ t3a.nano │ 0.0016 │ Linux/UNIX              │ us-east-2b        ║
║ t3.nano  │ 0.0017 │ Linux/UNIX              │ ap-south-1a       ║
║ t3.nano  │ 0.0017 │ Linux/UNIX              │ ca-central-1a     ║
║ t3.nano  │ 0.0017 │ Linux/UNIX              │ eu-west-1a        ║
║ t3a.nano │ 0.0017 │ Linux/UNIX (Amazon VPC) │ us-east-1a        ║
║ t3a.nano │ 0.0017 │ Linux/UNIX              │ us-west-1b        ║
║ t3.nano  │ 0.0018 │ Linux/UNIX              │ eu-central-1a     ║
║ t3.nano  │ 0.0018 │ Linux/UNIX              │ eu-west-2a        ║
║ t3a.nano │ 0.0018 │ Linux/UNIX (Amazon VPC) │ ap-northeast-1a   ║
║ t3a.nano │ 0.0018 │ Linux/UNIX              │ ap-northeast-2a   ║
║ t3a.nano │ 0.0018 │ Linux/UNIX (Amazon VPC) │ ap-southeast-1a   ║
║ t3a.nano │ 0.0018 │ Linux/UNIX              │ ap-southeast-2a   ║
║ t3.nano  │ 0.0019 │ Linux/UNIX              │ us-west-1b        ║
║ t3a.nano │ 0.0019 │ Linux/UNIX              │ sa-east-1a        ║
║ t1.micro │ 0.0020 │ Linux/UNIX              │ ap-southeast-1a   ║
║ t1.micro │ 0.0020 │ Linux/UNIX (Amazon VPC) │ ap-southeast-1a   ║
║ t1.micro │ 0.0020 │ Linux/UNIX              │ ap-southeast-2a   ║
║ t1.micro │ 0.0020 │ Linux/UNIX              │ eu-west-1a        ║
║ t1.micro │ 0.0020 │ Linux/UNIX              │ us-east-1a        ║
║ t1.micro │ 0.0020 │ Linux/UNIX (Amazon VPC) │ us-east-1a        ║
╚══════════╧════════╧═════════════════════════╧═══════════════════╝
"
`;

exports[`cli test by import should return expected values with instance family types and sizes 1`] = `
"╔══════════╤══════════╤═════════════════════════╤═══════════════════╗
║ Type     │    Price │ Platform                │ Availability Zone ║
╟──────────┼──────────┼─────────────────────────┼───────────────────╢
║ c5.large │ 0.019000 │ Linux/UNIX              │ us-east-2a        ║
║ c5.large │ 0.019000 │ Linux/UNIX              │ us-east-2b        ║
║ c5.large │ 0.019000 │ Linux/UNIX              │ us-east-2c        ║
║ c5.large │ 0.027300 │ Linux/UNIX              │ eu-north-1a       ║
║ c5.large │ 0.027300 │ Linux/UNIX              │ eu-north-1b       ║
║ c5.large │ 0.027300 │ Linux/UNIX              │ eu-north-1c       ║
║ c5.large │ 0.028900 │ Linux/UNIX              │ ca-central-1a     ║
║ c5.large │ 0.029300 │ Linux/UNIX              │ ca-central-1b     ║
║ c5.large │ 0.030000 │ Linux/UNIX              │ ap-northeast-2a   ║
║ c5.large │ 0.030000 │ Linux/UNIX              │ ap-northeast-2b   ║
║ c5.large │ 0.030000 │ Linux/UNIX              │ ap-northeast-2c   ║
║ c5.large │ 0.030300 │ Linux/UNIX              │ eu-west-3c        ║
║ c5.large │ 0.030400 │ Linux/UNIX              │ eu-west-3b        ║
║ c5.large │ 0.030800 │ Linux/UNIX              │ us-west-1b        ║
║ c5.large │ 0.031300 │ Linux/UNIX              │ us-west-1c        ║
║ c5.large │ 0.031400 │ Linux/UNIX              │ eu-west-2a        ║
║ c5.large │ 0.032100 │ Linux/UNIX (Amazon VPC) │ ap-southeast-1c   ║
║ c5.large │ 0.032200 │ Linux/UNIX              │ eu-west-2b        ║
║ c5.large │ 0.032600 │ Linux/UNIX              │ us-west-2d        ║
║ c5.large │ 0.032712 │ Linux/UNIX (Amazon VPC) │ us-east-1f        ║
╚══════════╧══════════╧═════════════════════════╧═══════════════════╝
"
`;

exports[`cli test by import should return expected values with user options 1`] = `
"╔══════════╤══════════╤═════════════════════════╤═══════════════════╗
║ Type     │    Price │ Platform                │ Availability Zone ║
╟──────────┼──────────┼─────────────────────────┼───────────────────╢
║ c5.large │ 0.032712 │ Linux/UNIX (Amazon VPC) │ us-east-1f        ║
║ c5.large │ 0.037600 │ Linux/UNIX (Amazon VPC) │ us-east-1c        ║
║ c5.large │ 0.038300 │ Linux/UNIX (Amazon VPC) │ us-east-1a        ║
║ c5.large │ 0.038400 │ Linux/UNIX (Amazon VPC) │ us-east-1d        ║
║ c5.large │ 0.041000 │ Linux/UNIX (Amazon VPC) │ us-east-1b        ║
╚══════════╧══════════╧═════════════════════════╧═══════════════════╝
"
`;

exports[`cli test by import should return expected values with wide option 1`] = `
"╔══════════╤════════╤══════╤═══════╤═════════════════════════╤═══════════════════╤═══════════════════════════╗
║ Type     │  Price │ vCPU │   RAM │ Platform                │ Availability Zone │ Region                    ║
╟──────────┼────────┼──────┼───────┼─────────────────────────┼───────────────────┼───────────────────────────╢
║ t3a.nano │ 0.0015 │    2 │   0.5 │ Linux/UNIX              │ us-west-2a        │ US West (Oregon)          ║
║ t3.nano  │ 0.0016 │    2 │   0.5 │ Linux/UNIX              │ eu-north-1a       │ Europe (Stockholm)        ║
║ t3.nano  │ 0.0016 │    2 │   0.5 │ Linux/UNIX (Amazon VPC) │ us-east-1a        │ US East (N. Virginia)     ║
║ t3.nano  │ 0.0016 │    2 │   0.5 │ Linux/UNIX              │ us-east-2a        │ US East (Ohio)            ║
║ t3.nano  │ 0.0016 │    2 │   0.5 │ Linux/UNIX              │ us-west-2a        │ US West (Oregon)          ║
║ t3a.nano │ 0.0016 │    2 │   0.5 │ Linux/UNIX              │ ca-central-1a     │ Canada (Central)          ║
║ t3a.nano │ 0.0016 │    2 │   0.5 │ Linux/UNIX              │ eu-central-1a     │ Europe (Frankfurt)        ║
║ t3a.nano │ 0.0016 │    2 │   0.5 │ Linux/UNIX              │ eu-west-1b        │ Europe (Ireland)          ║
║ t3a.nano │ 0.0016 │    2 │   0.5 │ Linux/UNIX              │ eu-west-2a        │ Europe (London)           ║
║ t3a.nano │ 0.0016 │    2 │   0.5 │ Linux/UNIX              │ eu-west-3a        │ Europe (Paris)            ║
║ t3a.nano │ 0.0016 │    2 │   0.5 │ Linux/UNIX              │ us-east-2b        │ US East (Ohio)            ║
║ t3.nano  │ 0.0017 │    2 │   0.5 │ Linux/UNIX              │ ap-south-1a       │ Asia Pacific (Mumbai)     ║
║ t3.nano  │ 0.0017 │    2 │   0.5 │ Linux/UNIX              │ ca-central-1a     │ Canada (Central)          ║
║ t3.nano  │ 0.0017 │    2 │   0.5 │ Linux/UNIX              │ eu-west-1a        │ Europe (Ireland)          ║
║ t3a.nano │ 0.0017 │    2 │   0.5 │ Linux/UNIX (Amazon VPC) │ us-east-1a        │ US East (N. Virginia)     ║
║ t3a.nano │ 0.0017 │    2 │   0.5 │ Linux/UNIX              │ us-west-1b        │ US West (N. California)   ║
║ t3.nano  │ 0.0018 │    2 │   0.5 │ Linux/UNIX              │ eu-central-1a     │ Europe (Frankfurt)        ║
║ t3.nano  │ 0.0018 │    2 │   0.5 │ Linux/UNIX              │ eu-west-2a        │ Europe (London)           ║
║ t3a.nano │ 0.0018 │    2 │   0.5 │ Linux/UNIX (Amazon VPC) │ ap-northeast-1a   │ Asia Pacific (Tokyo)      ║
║ t3a.nano │ 0.0018 │    2 │   0.5 │ Linux/UNIX              │ ap-northeast-2a   │ Asia Pacific (Seoul)      ║
║ t3a.nano │ 0.0018 │    2 │   0.5 │ Linux/UNIX (Amazon VPC) │ ap-southeast-1a   │ Asia Pacific (Singapore)  ║
║ t3a.nano │ 0.0018 │    2 │   0.5 │ Linux/UNIX              │ ap-southeast-2a   │ Asia Pacific (Sydney)     ║
║ t3.nano  │ 0.0019 │    2 │   0.5 │ Linux/UNIX              │ us-west-1b        │ US West (N. California)   ║
║ t3a.nano │ 0.0019 │    2 │   0.5 │ Linux/UNIX              │ sa-east-1a        │ South America (Sao Paulo) ║
║ t1.micro │ 0.0020 │    1 │ 0.613 │ Linux/UNIX              │ ap-southeast-1a   │ Asia Pacific (Singapore)  ║
║ t1.micro │ 0.0020 │    1 │ 0.613 │ Linux/UNIX (Amazon VPC) │ ap-southeast-1a   │ Asia Pacific (Singapore)  ║
║ t1.micro │ 0.0020 │    1 │ 0.613 │ Linux/UNIX              │ ap-southeast-2a   │ Asia Pacific (Sydney)     ║
║ t1.micro │ 0.0020 │    1 │ 0.613 │ Linux/UNIX              │ eu-west-1a        │ Europe (Ireland)          ║
║ t1.micro │ 0.0020 │    1 │ 0.613 │ Linux/UNIX              │ us-east-1a        │ US East (N. Virginia)     ║
║ t1.micro │ 0.0020 │    1 │ 0.613 │ Linux/UNIX (Amazon VPC) │ us-east-1a        │ US East (N. Virginia)     ║
╚══════════╧════════╧══════╧═══════╧═════════════════════════╧═══════════════════╧═══════════════════════════╝
"
`;

exports[`cli test by import should return expected values with wildcard platforms 1`] = `
"╔══════════╤════════╤═════════════════════════╤═══════════════════╗
║ Type     │  Price │ Platform                │ Availability Zone ║
╟──────────┼────────┼─────────────────────────┼───────────────────╢
║ t3.nano  │ 0.0016 │ Linux/UNIX (Amazon VPC) │ us-east-1a        ║
║ t3.nano  │ 0.0016 │ Linux/UNIX (Amazon VPC) │ us-east-1b        ║
║ t3.nano  │ 0.0016 │ Linux/UNIX (Amazon VPC) │ us-east-1c        ║
║ t3.nano  │ 0.0016 │ Linux/UNIX (Amazon VPC) │ us-east-1d        ║
║ t3.nano  │ 0.0016 │ Linux/UNIX (Amazon VPC) │ us-east-1f        ║
║ t3a.nano │ 0.0017 │ Linux/UNIX (Amazon VPC) │ us-east-1a        ║
║ t3a.nano │ 0.0017 │ Linux/UNIX (Amazon VPC) │ us-east-1c        ║
║ t3a.nano │ 0.0018 │ Linux/UNIX (Amazon VPC) │ us-east-1b        ║
║ t3a.nano │ 0.0018 │ Linux/UNIX (Amazon VPC) │ us-east-1d        ║
║ t3a.nano │ 0.0018 │ Linux/UNIX (Amazon VPC) │ us-east-1f        ║
╚══════════╧════════╧═════════════════════════╧═══════════════════╝

╔══════════╤═══════╤══════════════════════╤═══════════════════╗
║ Type     │ Price │ Platform             │ Availability Zone ║
╟──────────┼───────┼──────────────────────┼───────────────────╢
║ t1.micro │ 0.002 │ Windows              │ us-east-1a        ║
║ t1.micro │ 0.002 │ Windows (Amazon VPC) │ us-east-1a        ║
║ t1.micro │ 0.002 │ Windows              │ us-east-1b        ║
║ t1.micro │ 0.002 │ Windows (Amazon VPC) │ us-east-1b        ║
║ t1.micro │ 0.002 │ Windows              │ us-east-1c        ║
║ t1.micro │ 0.002 │ Windows (Amazon VPC) │ us-east-1c        ║
║ t1.micro │ 0.002 │ Windows              │ us-east-1d        ║
║ t1.micro │ 0.002 │ Windows (Amazon VPC) │ us-east-1d        ║
║ t1.micro │ 0.002 │ Windows (Amazon VPC) │ us-east-1f        ║
║ t3a.nano │ 0.006 │ Windows (Amazon VPC) │ us-east-1a        ║
╚══════════╧═══════╧══════════════════════╧═══════════════════╝
"
`;

exports[`cli test by import ui mode should return expected result 1`] = `
"╔══════════╤════════╤════════════╤═══════════════════╗
║ Type     │  Price │ Platform   │ Availability Zone ║
╟──────────┼────────┼────────────┼───────────────────╢
║ c4.large │ 0.0181 │ Linux/UNIX │ us-east-2a        ║
║ c4.large │ 0.0181 │ Linux/UNIX │ us-east-2c        ║
║ c4.large │ 0.0195 │ Linux/UNIX │ us-east-2b        ║
║ r5.large │ 0.0209 │ Linux/UNIX │ us-east-2a        ║
║ r5.large │ 0.0211 │ Linux/UNIX │ us-east-2c        ║
║ r5.large │ 0.0212 │ Linux/UNIX │ us-east-2b        ║
║ c4.large │ 0.0293 │ Linux/UNIX │ us-west-1b        ║
║ c4.large │ 0.0293 │ Linux/UNIX │ us-west-1c        ║
║ c4.large │ 0.0313 │ Linux/UNIX │ us-west-2c        ║
║ c4.large │ 0.0315 │ Linux/UNIX │ us-west-2a        ║
╚══════════╧════════╧════════════╧═══════════════════╝
"
`;

exports[`cli test by spawnSync should stdout help screen 1`] = `
"aws-spot-price

get current AWS spot instance prices

Options:
      --version             Show version number                        [boolean]
      --help                Show help                                  [boolean]
      --ui                  Start with UI mode        [boolean] [default: false]
  -r, --region              AWS regions.
           [array] [choices: \\"us-east-1\\", \\"us-east-2\\", \\"us-west-1\\", \\"us-west-2\\",
                  \\"af-south-1\\", \\"ap-east-1\\", \\"ap-northeast-1\\", \\"ap-northeast-2\\",
             \\"ap-northeast-3\\", \\"ap-south-1\\", \\"ap-southeast-1\\", \\"ap-southeast-2\\",
   \\"ap-southeast-3\\", \\"ca-central-1\\", \\"eu-central-1\\", \\"eu-north-1\\", \\"eu-south-1\\",
               \\"eu-west-1\\", \\"eu-west-2\\", \\"eu-west-3\\", \\"me-south-1\\", \\"sa-east-1\\"]
  -i, --instanceType        EC2 type
           [array] [choices: \\"a1.medium\\", \\"a1.large\\", \\"a1.xlarge\\", \\"a1.2xlarge\\",
      \\"a1.4xlarge\\", \\"a1.metal\\", \\"t1.micro\\", \\"t2.micro\\", \\"t2.small\\", \\"t2.medium\\",
       \\"t2.large\\", \\"t2.xlarge\\", \\"t2.2xlarge\\", \\"t3.nano\\", \\"t3.micro\\", \\"t3.small\\",
    \\"t3.medium\\", \\"t3.large\\", \\"t3.xlarge\\", \\"t3.2xlarge\\", \\"t3a.nano\\", \\"t3a.micro\\",
            \\"t3a.small\\", \\"t3a.medium\\", \\"t3a.large\\", \\"t3a.xlarge\\", \\"t3a.2xlarge\\",
  \\"t4g.nano\\", \\"t4g.micro\\", \\"t4g.small\\", \\"t4g.medium\\", \\"t4g.large\\", \\"t4g.xlarge\\",
   \\"t4g.2xlarge\\", \\"m1.small\\", \\"m1.medium\\", \\"m1.large\\", \\"m1.xlarge\\", \\"m2.xlarge\\",
               \\"m2.2xlarge\\", \\"m2.4xlarge\\", \\"m3.medium\\", \\"m3.large\\", \\"m3.xlarge\\",
              \\"m3.2xlarge\\", \\"m4.large\\", \\"m4.xlarge\\", \\"m4.2xlarge\\", \\"m4.4xlarge\\",
            \\"m4.10xlarge\\", \\"m4.16xlarge\\", \\"m5.large\\", \\"m5.xlarge\\", \\"m5.2xlarge\\",
        \\"m5.4xlarge\\", \\"m5.8xlarge\\", \\"m5.12xlarge\\", \\"m5.16xlarge\\", \\"m5.24xlarge\\",
            \\"m5.metal\\", \\"m5a.large\\", \\"m5a.xlarge\\", \\"m5a.2xlarge\\", \\"m5a.4xlarge\\",
    \\"m5a.8xlarge\\", \\"m5a.12xlarge\\", \\"m5a.16xlarge\\", \\"m5a.24xlarge\\", \\"m5ad.large\\",
                  \\"m5ad.xlarge\\", \\"m5ad.2xlarge\\", \\"m5ad.4xlarge\\", \\"m5ad.8xlarge\\",
   \\"m5ad.12xlarge\\", \\"m5ad.16xlarge\\", \\"m5ad.24xlarge\\", \\"m5d.large\\", \\"m5d.xlarge\\",
    \\"m5d.2xlarge\\", \\"m5d.4xlarge\\", \\"m5d.8xlarge\\", \\"m5d.12xlarge\\", \\"m5d.16xlarge\\",
       \\"m5d.24xlarge\\", \\"m5d.metal\\", \\"m5dn.large\\", \\"m5dn.xlarge\\", \\"m5dn.2xlarge\\",
               \\"m5dn.4xlarge\\", \\"m5dn.8xlarge\\", \\"m5dn.12xlarge\\", \\"m5dn.16xlarge\\",
        \\"m5dn.24xlarge\\", \\"m5dn.metal\\", \\"m5n.large\\", \\"m5n.xlarge\\", \\"m5n.2xlarge\\",
   \\"m5n.4xlarge\\", \\"m5n.8xlarge\\", \\"m5n.12xlarge\\", \\"m5n.16xlarge\\", \\"m5n.24xlarge\\",
       \\"m5n.metal\\", \\"m5zn.large\\", \\"m5zn.xlarge\\", \\"m5zn.2xlarge\\", \\"m5zn.3xlarge\\",
       \\"m5zn.6xlarge\\", \\"m5zn.12xlarge\\", \\"m5zn.metal\\", \\"m6a.large\\", \\"m6a.xlarge\\",
    \\"m6a.2xlarge\\", \\"m6a.4xlarge\\", \\"m6a.8xlarge\\", \\"m6a.12xlarge\\", \\"m6a.16xlarge\\",
      \\"m6a.24xlarge\\", \\"m6a.32xlarge\\", \\"m6a.48xlarge\\", \\"m6g.medium\\", \\"m6g.large\\",
      \\"m6g.xlarge\\", \\"m6g.2xlarge\\", \\"m6g.4xlarge\\", \\"m6g.8xlarge\\", \\"m6g.12xlarge\\",
        \\"m6g.16xlarge\\", \\"m6g.metal\\", \\"m6gd.medium\\", \\"m6gd.large\\", \\"m6gd.xlarge\\",
                \\"m6gd.2xlarge\\", \\"m6gd.4xlarge\\", \\"m6gd.8xlarge\\", \\"m6gd.12xlarge\\",
        \\"m6gd.16xlarge\\", \\"m6gd.metal\\", \\"m6i.large\\", \\"m6i.xlarge\\", \\"m6i.2xlarge\\",
   \\"m6i.4xlarge\\", \\"m6i.8xlarge\\", \\"m6i.12xlarge\\", \\"m6i.16xlarge\\", \\"m6i.24xlarge\\",
              \\"m6i.32xlarge\\", \\"m6i.metal\\", \\"c1.medium\\", \\"c1.xlarge\\", \\"c3.large\\",
              \\"c3.xlarge\\", \\"c3.2xlarge\\", \\"c3.4xlarge\\", \\"c3.8xlarge\\", \\"c4.large\\",
              \\"c4.xlarge\\", \\"c4.2xlarge\\", \\"c4.4xlarge\\", \\"c4.8xlarge\\", \\"c5.large\\",
           \\"c5.xlarge\\", \\"c5.2xlarge\\", \\"c5.4xlarge\\", \\"c5.9xlarge\\", \\"c5.12xlarge\\",
            \\"c5.18xlarge\\", \\"c5.24xlarge\\", \\"c5.metal\\", \\"c5a.large\\", \\"c5a.xlarge\\",
    \\"c5a.2xlarge\\", \\"c5a.4xlarge\\", \\"c5a.8xlarge\\", \\"c5a.12xlarge\\", \\"c5a.16xlarge\\",
    \\"c5a.24xlarge\\", \\"c5ad.large\\", \\"c5ad.xlarge\\", \\"c5ad.2xlarge\\", \\"c5ad.4xlarge\\",
              \\"c5ad.8xlarge\\", \\"c5ad.12xlarge\\", \\"c5ad.16xlarge\\", \\"c5ad.24xlarge\\",
         \\"c5d.large\\", \\"c5d.xlarge\\", \\"c5d.2xlarge\\", \\"c5d.4xlarge\\", \\"c5d.9xlarge\\",
       \\"c5d.12xlarge\\", \\"c5d.18xlarge\\", \\"c5d.24xlarge\\", \\"c5d.metal\\", \\"c5n.large\\",
      \\"c5n.xlarge\\", \\"c5n.2xlarge\\", \\"c5n.4xlarge\\", \\"c5n.9xlarge\\", \\"c5n.18xlarge\\",
           \\"c5n.metal\\", \\"c6a.large\\", \\"c6a.xlarge\\", \\"c6a.2xlarge\\", \\"c6a.4xlarge\\",
  \\"c6a.8xlarge\\", \\"c6a.12xlarge\\", \\"c6a.16xlarge\\", \\"c6a.24xlarge\\", \\"c6a.32xlarge\\",
         \\"c6a.48xlarge\\", \\"c6g.medium\\", \\"c6g.large\\", \\"c6g.xlarge\\", \\"c6g.2xlarge\\",
      \\"c6g.4xlarge\\", \\"c6g.8xlarge\\", \\"c6g.12xlarge\\", \\"c6g.16xlarge\\", \\"c6g.metal\\",
     \\"c6gd.medium\\", \\"c6gd.large\\", \\"c6gd.xlarge\\", \\"c6gd.2xlarge\\", \\"c6gd.4xlarge\\",
  \\"c6gd.8xlarge\\", \\"c6gd.12xlarge\\", \\"c6gd.16xlarge\\", \\"c6gd.metal\\", \\"c6gn.medium\\",
    \\"c6gn.large\\", \\"c6gn.xlarge\\", \\"c6gn.2xlarge\\", \\"c6gn.4xlarge\\", \\"c6gn.8xlarge\\",
     \\"c6gn.12xlarge\\", \\"c6gn.16xlarge\\", \\"c6i.large\\", \\"c6i.xlarge\\", \\"c6i.2xlarge\\",
   \\"c6i.4xlarge\\", \\"c6i.8xlarge\\", \\"c6i.12xlarge\\", \\"c6i.16xlarge\\", \\"c6i.24xlarge\\",
             \\"c6i.32xlarge\\", \\"c6i.metal\\", \\"r3.large\\", \\"r3.xlarge\\", \\"r3.2xlarge\\",
              \\"r3.4xlarge\\", \\"r3.8xlarge\\", \\"r4.large\\", \\"r4.xlarge\\", \\"r4.2xlarge\\",
             \\"r4.4xlarge\\", \\"r4.8xlarge\\", \\"r4.16xlarge\\", \\"r5.large\\", \\"r5.xlarge\\",
         \\"r5.2xlarge\\", \\"r5.4xlarge\\", \\"r5.8xlarge\\", \\"r5.12xlarge\\", \\"r5.16xlarge\\",
            \\"r5.24xlarge\\", \\"r5.metal\\", \\"r5a.large\\", \\"r5a.xlarge\\", \\"r5a.2xlarge\\",
   \\"r5a.4xlarge\\", \\"r5a.8xlarge\\", \\"r5a.12xlarge\\", \\"r5a.16xlarge\\", \\"r5a.24xlarge\\",
    \\"r5ad.large\\", \\"r5ad.xlarge\\", \\"r5ad.2xlarge\\", \\"r5ad.4xlarge\\", \\"r5ad.8xlarge\\",
   \\"r5ad.12xlarge\\", \\"r5ad.16xlarge\\", \\"r5ad.24xlarge\\", \\"r5b.large\\", \\"r5b.xlarge\\",
    \\"r5b.2xlarge\\", \\"r5b.4xlarge\\", \\"r5b.8xlarge\\", \\"r5b.12xlarge\\", \\"r5b.16xlarge\\",
          \\"r5b.24xlarge\\", \\"r5b.metal\\", \\"r5d.large\\", \\"r5d.xlarge\\", \\"r5d.2xlarge\\",
   \\"r5d.4xlarge\\", \\"r5d.8xlarge\\", \\"r5d.12xlarge\\", \\"r5d.16xlarge\\", \\"r5d.24xlarge\\",
       \\"r5d.metal\\", \\"r5dn.large\\", \\"r5dn.xlarge\\", \\"r5dn.2xlarge\\", \\"r5dn.4xlarge\\",
              \\"r5dn.8xlarge\\", \\"r5dn.12xlarge\\", \\"r5dn.16xlarge\\", \\"r5dn.24xlarge\\",
          \\"r5dn.metal\\", \\"r5n.large\\", \\"r5n.xlarge\\", \\"r5n.2xlarge\\", \\"r5n.4xlarge\\",
     \\"r5n.8xlarge\\", \\"r5n.12xlarge\\", \\"r5n.16xlarge\\", \\"r5n.24xlarge\\", \\"r5n.metal\\",
          \\"r6g.medium\\", \\"r6g.large\\", \\"r6g.xlarge\\", \\"r6g.2xlarge\\", \\"r6g.4xlarge\\",
      \\"r6g.8xlarge\\", \\"r6g.12xlarge\\", \\"r6g.16xlarge\\", \\"r6g.metal\\", \\"r6gd.medium\\",
    \\"r6gd.large\\", \\"r6gd.xlarge\\", \\"r6gd.2xlarge\\", \\"r6gd.4xlarge\\", \\"r6gd.8xlarge\\",
      \\"r6gd.12xlarge\\", \\"r6gd.16xlarge\\", \\"r6gd.metal\\", \\"r6i.large\\", \\"r6i.xlarge\\",
    \\"r6i.2xlarge\\", \\"r6i.4xlarge\\", \\"r6i.8xlarge\\", \\"r6i.12xlarge\\", \\"r6i.16xlarge\\",
      \\"r6i.24xlarge\\", \\"r6i.32xlarge\\", \\"r6i.metal\\", \\"x1.16xlarge\\", \\"x1.32xlarge\\",
      \\"x1e.xlarge\\", \\"x1e.2xlarge\\", \\"x1e.4xlarge\\", \\"x1e.8xlarge\\", \\"x1e.16xlarge\\",
     \\"x1e.32xlarge\\", \\"x2gd.medium\\", \\"x2gd.large\\", \\"x2gd.xlarge\\", \\"x2gd.2xlarge\\",
               \\"x2gd.4xlarge\\", \\"x2gd.8xlarge\\", \\"x2gd.12xlarge\\", \\"x2gd.16xlarge\\",
             \\"x2gd.metal\\", \\"x2idn.16xlarge\\", \\"x2idn.24xlarge\\", \\"x2idn.32xlarge\\",
          \\"x2iedn.xlarge\\", \\"x2iedn.2xlarge\\", \\"x2iedn.4xlarge\\", \\"x2iedn.8xlarge\\",
      \\"x2iedn.16xlarge\\", \\"x2iedn.24xlarge\\", \\"x2iedn.32xlarge\\", \\"x2iezn.2xlarge\\",
        \\"x2iezn.4xlarge\\", \\"x2iezn.6xlarge\\", \\"x2iezn.8xlarge\\", \\"x2iezn.12xlarge\\",
        \\"x2iezn.metal\\", \\"z1d.large\\", \\"z1d.xlarge\\", \\"z1d.2xlarge\\", \\"z1d.3xlarge\\",
          \\"z1d.6xlarge\\", \\"z1d.12xlarge\\", \\"z1d.metal\\", \\"d2.xlarge\\", \\"d2.2xlarge\\",
            \\"d2.4xlarge\\", \\"d2.8xlarge\\", \\"d3.xlarge\\", \\"d3.2xlarge\\", \\"d3.4xlarge\\",
    \\"d3.8xlarge\\", \\"d3en.xlarge\\", \\"d3en.2xlarge\\", \\"d3en.4xlarge\\", \\"d3en.6xlarge\\",
      \\"d3en.8xlarge\\", \\"d3en.12xlarge\\", \\"h1.2xlarge\\", \\"h1.4xlarge\\", \\"h1.8xlarge\\",
           \\"h1.16xlarge\\", \\"i2.xlarge\\", \\"i2.2xlarge\\", \\"i2.4xlarge\\", \\"i2.8xlarge\\",
              \\"i3.large\\", \\"i3.xlarge\\", \\"i3.2xlarge\\", \\"i3.4xlarge\\", \\"i3.8xlarge\\",
         \\"i3.16xlarge\\", \\"i3.metal\\", \\"i3en.large\\", \\"i3en.xlarge\\", \\"i3en.2xlarge\\",
               \\"i3en.3xlarge\\", \\"i3en.6xlarge\\", \\"i3en.12xlarge\\", \\"i3en.24xlarge\\",
  \\"i3en.metal\\", \\"im4gn.large\\", \\"im4gn.xlarge\\", \\"im4gn.2xlarge\\", \\"im4gn.4xlarge\\",
             \\"im4gn.8xlarge\\", \\"im4gn.16xlarge\\", \\"is4gen.medium\\", \\"is4gen.large\\",
          \\"is4gen.xlarge\\", \\"is4gen.2xlarge\\", \\"is4gen.4xlarge\\", \\"is4gen.8xlarge\\",
        \\"dl1.24xlarge\\", \\"f1.2xlarge\\", \\"f1.4xlarge\\", \\"f1.16xlarge\\", \\"g2.2xlarge\\",
          \\"g2.8xlarge\\", \\"g3.4xlarge\\", \\"g3.8xlarge\\", \\"g3.16xlarge\\", \\"g3s.xlarge\\",
                  \\"g4ad.xlarge\\", \\"g4ad.2xlarge\\", \\"g4ad.4xlarge\\", \\"g4ad.8xlarge\\",
                 \\"g4ad.16xlarge\\", \\"g4dn.xlarge\\", \\"g4dn.2xlarge\\", \\"g4dn.4xlarge\\",
    \\"g4dn.8xlarge\\", \\"g4dn.12xlarge\\", \\"g4dn.16xlarge\\", \\"g4dn.metal\\", \\"g5.xlarge\\",
         \\"g5.2xlarge\\", \\"g5.4xlarge\\", \\"g5.8xlarge\\", \\"g5.12xlarge\\", \\"g5.16xlarge\\",
       \\"g5.24xlarge\\", \\"g5.48xlarge\\", \\"g5g.xlarge\\", \\"g5g.2xlarge\\", \\"g5g.4xlarge\\",
      \\"g5g.8xlarge\\", \\"g5g.16xlarge\\", \\"g5g.metal\\", \\"inf1.xlarge\\", \\"inf1.2xlarge\\",
      \\"inf1.6xlarge\\", \\"inf1.24xlarge\\", \\"p2.xlarge\\", \\"p2.8xlarge\\", \\"p2.16xlarge\\",
     \\"p3.2xlarge\\", \\"p3.8xlarge\\", \\"p3.16xlarge\\", \\"p3dn.24xlarge\\", \\"p4d.24xlarge\\",
                                   \\"vt1.3xlarge\\", \\"vt1.6xlarge\\", \\"vt1.24xlarge\\"]
      --family              EC2 instance family.
                    [array] [choices: \\"general\\", \\"compute\\", \\"memory\\", \\"storage\\",
                                                         \\"acceleratedComputing\\"]
  -f, --familyType          EC2 instance family types.
       [array] [choices: \\"a1\\", \\"t1\\", \\"t2\\", \\"t3\\", \\"t3a\\", \\"t4g\\", \\"m1\\", \\"m2\\", \\"m3\\",
  \\"m4\\", \\"m5\\", \\"m5a\\", \\"m5ad\\", \\"m5d\\", \\"m5dn\\", \\"m5n\\", \\"m5zn\\", \\"m6a\\", \\"m6g\\", \\"m6gd\\",
       \\"m6i\\", \\"c1\\", \\"c3\\", \\"c4\\", \\"c5\\", \\"c5a\\", \\"c5ad\\", \\"c5d\\", \\"c5n\\", \\"c6a\\", \\"c6g\\",
   \\"c6gd\\", \\"c6gn\\", \\"c6i\\", \\"r3\\", \\"r4\\", \\"r5\\", \\"r5a\\", \\"r5ad\\", \\"r5b\\", \\"r5d\\", \\"r5dn\\",
  \\"r5n\\", \\"r6g\\", \\"r6gd\\", \\"r6i\\", \\"x1\\", \\"x1e\\", \\"x2gd\\", \\"x2idn\\", \\"x2iedn\\", \\"x2iezn\\",
  \\"z1d\\", \\"d2\\", \\"d3\\", \\"d3en\\", \\"h1\\", \\"i2\\", \\"i3\\", \\"i3en\\", \\"im4gn\\", \\"is4gen\\", \\"dl1\\",
       \\"f1\\", \\"g2\\", \\"g3\\", \\"g3s\\", \\"g4ad\\", \\"g4dn\\", \\"g5\\", \\"g5g\\", \\"inf1\\", \\"p2\\", \\"p3\\",
                                                           \\"p3dn\\", \\"p4d\\", \\"vt1\\"]
  -s, --size                EC2 instance sizes.
        [array] [choices: \\"nano\\", \\"micro\\", \\"small\\", \\"medium\\", \\"large\\", \\"xlarge\\",
   \\"2xlarge\\", \\"3xlarge\\", \\"4xlarge\\", \\"6xlarge\\", \\"8xlarge\\", \\"9xlarge\\", \\"10xlarge\\",
         \\"12xlarge\\", \\"16xlarge\\", \\"18xlarge\\", \\"24xlarge\\", \\"32xlarge\\", \\"48xlarge\\",
                                                                        \\"metal\\"]
      --minVCPU, --mc       Minimum VCPU count             [number] [default: 1]
      --minMemoryGiB, --mm  Minimum memory (GiB)         [number] [default: 0.5]
      --priceLimit, --pl    Maximum price limit          [number] [default: 100]
  -p, --platforms           Platforms. Choose \`windows\` or \`linux\` (all
                            lowercase) as wildcard.
  [array] [choices: \\"Linux/UNIX\\", \\"Linux/UNIX (Amazon VPC)\\", \\"SUSE Linux\\", \\"SUSE
      Linux (Amazon VPC)\\", \\"Red Hat Enterprise Linux\\", \\"Red Hat Enterprise Linux
           (Amazon VPC)\\", \\"Windows\\", \\"Windows (Amazon VPC)\\", \\"linux\\", \\"windows\\"]
                             [default: [\\"Linux/UNIX\\",\\"Linux/UNIX (Amazon VPC)\\"]]
  -l, --limit               Limit results output length   [number] [default: 30]
      --reduceAZ, --raz     Reduce results with cheapest Availability Zone
                            within Region              [boolean] [default: true]
  -w, --wide                Output results with detail (vCPU, memory, etc)
                                                      [boolean] [default: false]
  -j, --json                Outputs in JSON format    [boolean] [default: false]
      --accessKeyId         AWS Access Key ID.                          [string]
      --secretAccessKey     AWS Secret Access Key.                      [string]
"
`;
